<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="16dp"
    android:background="#A8DADC">

    <TextView
        android:id="@+id/txt_attendance_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txt_attendance_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/txt_attendance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_attendance_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelas"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txt_attendance_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keterangan"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txt_attendance_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kehadiran"
        android:gravity="right"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:textStyle="bold|italic"/>

</LinearLayout>