<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F1FAEE"
    tools:context=".AbsensiActivity">

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/edt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/edt_ttanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_kelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelas"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/edt_kelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_keterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keterangan"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/edt_keterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_kehadiran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kehadiran"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/edt_kehadiran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/simpan"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_hapus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/hapus"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>
</LinearLayout>